--- a/lit.bib
+++ b/lit.bib
@@ -969,6 +969,17 @@
   editor = {Heyting, A.}
 }
 
+@ARTICLE{SK63,
+  author = {Kripke, S. A.},
+  title = {Semantical Considerations on Modal Logic},
+  journal = {Acta Philosophica Fennica},
+  year = {1963},
+  volume = {16},
+  pages = {83--94},
+  owner = {andylawrence},
+  timestamp = {2014.08.04}
+}
+
 @MISC{OK02,
   author = {Kullmann, O.},
   title = {Investigating the behaviour of a SAT solver on random formulas},
