--- a/lit.bib
+++ b/lit.bib
@@ -242,6 +242,15 @@
   timestamp = {2014.06.18}
 }
 
+@ARTICLE{AL14b,
+  author = {Berger, U. and Lawrence, A. and Nordvall-Forsberg, F. and Sei},
+  title = {Extracting Verified Decision Procedures: DPLL and Resolution},
+  journal = {(To appear in) Logic Methods in Computer Science},
+  year = {2014},
+  owner = {andylawrence},
+  timestamp = {2014.08.04}
+}
+
 @ARTICLE{AL13a,
   author = {Berger, U. and Lawrence, A. and Nordvall-Forsberg, F. and Seisenberger,
 	M.},
@@ -894,6 +903,21 @@
   year = {2010}
 }
 
+@INPROCEEDINGS{AL14a,
+  author = {James, P. and Lawrence, A. and Moller, F. and Roggenbach, M. and
+	Seisenberger, M. and Setzer, A. and Kanso, K. and Chadwick, S.},
+  title = {Verification of Solid State Interlocking Programs},
+  booktitle = {Software Engineering and Formal Methods},
+  year = {2014},
+  editor = {Counsell, S. and N{\'u}{\~n}ez, M.},
+  volume = {8368},
+  series = {{L}ecture {N}otes in {C}omputer {S}cience},
+  pages = {253--268},
+  publisher = {Springer International Publishing},
+  owner = {andylawrence},
+  timestamp = {2014.08.04}
+}
+
 @PHDTHESIS{kahsai10,
   author = {Temesghen Kahsai},
   title = {{P}roperty {P}reserving {D}evelopment and {T}esting for {CSP-CASL}},
@@ -1349,6 +1373,20 @@
   publisher = {Springer-Verlag},
   owner = {andylawrence},
   timestamp = {2014.04.29}
+}
+
+@INPROCEEDINGS{KP09,
+  author = {Pipatsrisawat, K. and Darwiche, A.},
+  title = {On the Power of Clause-Learning SAT Solvers with Restarts},
+  booktitle = {Principles and Practice of Constraint Programming},
+  year = {2009},
+  editor = {Gent, I. P.},
+  volume = {5732},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {654--668},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.08.04}
 }
 
 @ARTICLE{AP08,
