--- a/VerifyingSSI.tex
+++ b/VerifyingSSI.tex
@@ -72,8 +72,7 @@ We modelled the completeness statement of this solver using Minlogs built in ind
 ") )))}
 \end{center}
 
-This resultsi n the following output:
-
+This results in the following output:
 \begin{lstlisting}
 (InR for@@algmodDPLL (lit=>boole)@@(cla=>lit))
 (CF(CC(Nil lit)::(CC(Neg(Variable 32)):):)@
@@ -116,8 +115,7 @@ CmodDPLLTwo(Pos(Variable 32))
 \end{lstlisting}
 
 
-
-
+\FloatBarrier
 \section{Application of X-SAT to Benchmark problems}
 %
 %%%We have performed several comparisons between different implementations of our solver. 
